src/scss/partials/_chat.scss
/* ... */
.chats-container {
	height: 100%;
}

.chat {
	display: flex !important;
	// padding: 200px;
	width: 100%;
	align-items: center;
	//overflow: hidden;
	flex-direction: column;
	//z-index: 1;
	transition: transform var(--tabs-transition), filter var(--tabs-transition);

	@include animation-level(0) {
		transition: none !important;
	}

	&:not(.active):not(:last-child) {
		filter: brightness(.8);
	}

  &:not(.active) {
    transform: translate3d(calc(min(#{calc($large-screen / 4)}, 25vw) * -1), 0, 0);

    &:last-child {
      transform: translate3d(100%, 0, 0);
    }
  }

	// @include respond-to(no-floating-left-sidebar) {
	// 	&:not(.active) {
	// 		transform: translate3d(calc((100vw - min(calc(100vw * .4), 420px)) * -.25), 0, 0);

	// 		&:last-child { // * 420px - max left sidebar width, .4 - left sidebar width percents
	// 			transform: translate3d(calc(100vw - min(calc(100vw * .4), 420px)), 0, 0);
	// 		}
	// 	}
	// }

	// @include respond-to(large-screens) {
	// 	&:not(.active) {
	// 		transform: translate3d(calc((#{$large-screen} - var(--right-column-width)) * -.25), 0, 0);

	// 		&:last-child {
	// 			transform: translate3d(calc(#{$large-screen} - var(--right-column-width)), 0, 0);
	// 		}
	// 	}
	// }
	
	// @include respond-to(only-medium-screens) {
	// 	&:not(.active) {
	// 		transform: translate3d(-25vw, 0, 0);

	// 		&:last-child {
	// 			transform: translate3d(75vw, 0, 0);
	// 		}
	// 	}
	// }

	// @include respond-to(until-floating-left-sidebar) {
	// 	&:not(.active) {
	// 		transform: translate3d(-25vw, 0, 0);

	// 		&:last-child {
	// 			transform: translate3d(100vw, 0, 0);
	// 		}
	// 	}
	// }

	&-background {
		overflow: hidden;
		background-color: #e6ebee;
    user-select: none;

		html.night & {
			background-color: var(--border-color);
			/* .chat-background-item {
				display: none;
			} */
		}

		&.no-transition:before {
			transition: none !important;
		}

		&, 
    &-item {
			position: absolute !important;
			top: 0;
			left: 0;
			bottom: 0;
			right: 0;
		}

		&-item {
      &.is-pattern {
        // margin: 0 !important;
        background-image: none !important;
        background-size: contain;
        background-repeat: repeat-x;
        background-color: #000 !important;
        display: flex;
        align-items: center;
        justify-content: center;
        // mix-blend-mode: overlay;

        // @include respond-to(medium-screens) {
        //   height: 150%;
        //   top: -25%;
        // }
      }

      &.is-image {
        background-color: #000;
      }

			@include animation-level(2) {
				transition: opacity var(--transition-standard-out);
				opacity: 0;
				
				&.is-visible:not(.backwards) {
					transition: opacity var(--transition-standard-in);
					opacity: 1;
				}
			}

      &-scalable {
        @include respond-to(medium-screens) {
          transform-origin: var(--transform-origin-left-center);
  
          @include animation-level(2) {
            // !WARNING, МАГИЧЕСКОЕ ЧИСЛО
            margin: -18.5rem 0 -22rem 0;
            transform: scale(1);
            transition: transform var(--transition-standard-out), opacity var(--transition-standard-out) !important;
          }
  
          body.animation-level-2.is-right-column-shown .chat.active & {
            transform: scaleX(calc(1 - var(--right-column-proportion, 0)));
            transition: transform var(--transition-standard-in), opacity var(--transition-standard-in) !important;
          }
        }
      }

      &-canvas {
        --opacity-max: 1;
        opacity: var(--opacity-max);
        position: absolute;
        width: 100%;
      }

      &:not(.is-dark) &-pattern-canvas {
        mix-blend-mode: soft-light;
        // height: 100%;
      }

      &-color-canvas {
        height: 150%;
        top: -25%;
        margin: 0 !important;
        // height: 100%;
        // transform: scale(1.5);
        // transform: scaleY(1.5);
        
        // mask-repeat: round;

        mask-size: cover;
        mask-position: center;
      }

      &-image {
        --opacity-max: 1;
        opacity: var(--opacity-max);
        object-fit: cover;
        width: 100%;
        height: 100%;
      }
		}
	}

  .drops-container {
    --padding: 20px;
    --pinned-floating-height: 0px;
    top: calc(56px + var(--pinned-floating-height) + var(--padding));

    @include respond-to(medium-screens) {
      //transition: transform var(--layer-transition);
  
      body.is-right-column-shown & {
        //left: calc(var(--right-column-width) / -2);
        inset-inline-end: calc(var(--right-column-width));
      }
    }
  
    @include respond-to(handhelds) {
      --padding: 10px;
    }
  }

  .drop {
    max-width: 696px;
    --wrapper-padding: 15px;
  }

  &[data-type="chat"] .bubbles.is-chat-input-hidden .bubbles-group-last .bubble.is-group-last {
    margin-bottom: 1.25rem;
  }

  &.is-search-active {
    .bubbles-inner:before {
      content: " ";
      height: 3.75rem;
    }

    .is-date {
      top: 3.75rem;
    }
  }

  // .contextmenu {
    // box-shadow: none !important;
    // filter: drop-shadow(0 .125rem .5rem var(--menu-box-shadow-color));
    // background: none !important;
    // backdrop-filter: none !important;

    // &:before {
    //   content: " ";
    //   position: absolute;
    //   top: 0;
    //   right: 0;
    //   bottom: 0;
    //   left: 0;
    //   backdrop-filter: var(--menu-backdrop-filter);
    //   background-color: var(--menu-background-color);
    //   border-radius: inherit;
    // }
  // }
}
/* ... */

